--- a/bricks/basic/tsconfig.json
+++ b/bricks/basic/tsconfig.json
@@ -1,4 +1,4 @@
 {
   "extends": "../../tsconfig.module.json",
-  "include": ["./src", "../../declarations", "editors"]
+  "include": ["./src", "../../declarations"]
 }
