--- a/bricks/visual-builder/package.json
+++ b/bricks/visual-builder/package.json
@@ -52,6 +52,7 @@
     "@next-core/utils": "^1.7.14",
     "@next-shared/general": "^0.8.38",
     "@next-shared/markdown": "^0.1.3",
+    "path-to-regexp": "^6.2.2",
     "classnames": "^2.3.2",
     "html2canvas": "^1.4.1",
     "lodash": "^4.17.21",
