--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -74,11 +74,16 @@ jobs:
       env:
         NX_REJECT_UNKNOWN_LOCAL_CACHE: '0'
 
+    - name: Get coverage files
+      run: |
+        echo "COVERAGE_FILES=$(find ./{bricks,shared} -maxdepth 1 -mindepth 1 -type d -exec echo "{}/.coverage/cobertura-coverage.xml" \; | tr '\n' ',' | sed 's/,$//')" >> $GITHUB_ENV
+
     - name: Codecov
       uses: codecov/codecov-action@v4
       with:
         token: ${{ secrets.CODECOV_TOKEN }}
-        files: bricks/*/.coverage/cobertura-coverage.xml,shared/*/.coverage/cobertura-coverage.xml,!.cache/**/*
+        files: ${{ env.COVERAGE_FILES }}
+        disable_search: true
 
     - uses: easyops-cn/actions-next-publish-from-tags@master
       with:
