--- a/bricks/data-view/package.json
+++ b/bricks/data-view/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@next-bricks/data-view",
-  "version": "1.2.2",
+  "version": "1.3.0",
   "homepage": "https://github.com/easyops-cn/next-bricks/tree/master/bricks/data-view",
   "repository": {
     "type": "git",
@@ -35,6 +35,8 @@
     "postpublish": "mv package.json.bak package.json"
   },
   "dependencies": {
+    "@antv/l7": "2.22.0",
+    "@antv/l7-maps": "2.22.0",
     "@next-core/element": "^1.2.11",
     "@next-core/i18n": "^1.0.58",
     "@next-core/react-element": "^1.0.30",
@@ -47,9 +49,7 @@
     "d3-hierarchy": "^3.1.2",
     "react": "0.0.0-experimental-ee8509801-20230117",
     "resize-observer-polyfill": "^1.5.1",
-    "three": "^0.150.1",
-    "@antv/l7": "2.22.0",
-    "@antv/l7-maps": "2.22.0"
+    "three": "^0.150.1"
   },
   "devDependencies": {
     "@next-core/build-next-bricks": "^1.22.4",
