--- a/bricks/basic/package.json
+++ b/bricks/basic/package.json
@@ -48,6 +48,7 @@
     "@next-core/theme": "^1.5.4",
     "@next-core/types": "^1.12.1",
     "@next-shared/general": "^0.9.3",
+    "broadcast-channel": "^7.0.0",
     "classnames": "^2.3.2",
     "lodash": "^4.17.21",
     "react": "0.0.0-experimental-ee8509801-20230117"
