--- a/bricks/basic/package.json
+++ b/bricks/basic/package.json
@@ -50,6 +50,7 @@
     "@next-shared/general": "^0.9.3",
     "broadcast-channel": "^7.0.0",
     "classnames": "^2.3.2",
+    "dompurify": "^3.1.6",
     "lodash": "^4.17.21",
     "react": "0.0.0-experimental-ee8509801-20230117"
   },
