--- a/bricks/nav/package.json
+++ b/bricks/nav/package.json
@@ -35,7 +35,9 @@
     "postpublish": "mv package.json.bak package.json"
   },
   "dependencies": {
+    "@next-api-sdk/cmdb-sdk": "^1.1.0",
     "@next-api-sdk/micro-app-standalone-sdk": "^1.1.1",
+    "@next-api-sdk/sys-setting-sdk": "^1.1.1",
     "@next-api-sdk/user-service-sdk": "^1.3.0",
     "@next-core/easyops-runtime": "^0.12.12",
     "@next-core/element": "^1.2.11",
@@ -55,7 +57,6 @@
     "react-transition-group": "^4.4.5"
   },
   "devDependencies": {
-    "@next-api-sdk/cmdb-sdk": "^1.1.0",
     "@next-core/build-next-bricks": "^1.23.0",
     "@next-core/test-next": "^1.1.5"
   },
