--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "@types/d3-selection": "^3.0.10",
     "@types/d3-shape": "^3.1.6",
     "@types/d3-zoom": "^3.0.8",
+    "@types/dompurify": "^3.0.5",
     "@types/file-saver": "^2.0.5",
     "@types/history": "^4.7.11",
     "@types/jest": "^29.5.12",
