--- a/bricks/advanced/package.json
+++ b/bricks/advanced/package.json
@@ -48,12 +48,16 @@
     "@next-core/runtime": "^1.54.6",
     "@next-core/theme": "^1.5.4",
     "@next-core/types": "^1.12.1",
+    "@react-pdf-viewer/core": "^3.12.0",
+    "@react-pdf-viewer/default-layout": "^3.12.0",
+    "@react-pdf-viewer/page-navigation": "^3.12.0",
     "antd": "^5.19.3",
     "classnames": "^2.3.2",
     "html2canvas": "^1.4.1",
     "immutability-helper": "^3.1.1",
     "jspdf": "^2.5.1",
     "lodash": "^4.17.21",
+    "pdfjs-dist": "3.4.120",
     "react": "0.0.0-experimental-ee8509801-20230117",
     "react-dnd": "^16.0.1",
     "react-dnd-html5-backend": "^16.0.1",
