--- a/bricks/advanced/package.json
+++ b/bricks/advanced/package.json
@@ -66,7 +66,8 @@
   },
   "devDependencies": {
     "@next-core/build-next-bricks": "^1.23.0",
-    "@next-core/test-next": "^1.1.5"
+    "@next-core/test-next": "^1.1.5",
+    "copy-webpack-plugin": "^12.0.2"
   },
   "peerDependencies": {
     "@next-bricks/basic": "*",
