--- a/bricks/illustrations/package.json
+++ b/bricks/illustrations/package.json
@@ -57,10 +57,14 @@
     "postpublish": "mv package.json.bak package.json"
   },
   "dependencies": {
+    "@next-core/element": "^1.2.11",
     "@next-core/illustrations": "^0.11.31",
+    "@next-core/react-element": "^1.0.30",
+    "@next-core/react-runtime": "^1.6.29",
     "@next-core/types": "^1.12.1",
     "@next-core/utils": "^1.7.20",
-    "lodash": "^4.17.21"
+    "lodash": "^4.17.21",
+    "react": "0.0.0-experimental-ee8509801-20230117"
   },
   "devDependencies": {
     "@next-core/build-next-bricks": "^1.23.0",
