--- a/shared/markdown/package.json
+++ b/shared/markdown/package.json
@@ -34,12 +34,16 @@
     "build:types": "tsc --emitDeclarationOnly --declaration --declarationDir dist/types --project tsconfig.build.json"
   },
   "dependencies": {
+    "@next-core/theme": "^1.5.4",
     "hast-util-to-string": "^3.0.0",
     "is-absolute-url": "^4.0.1",
     "prismjs": "^1.29.0",
     "react": "0.0.0-experimental-ee8509801-20230117",
     "refractor": "^4.8.1",
     "rehype-react": "^8.0.0",
+    "rehype-raw": "^7.0.0",
+    "rehype-sanitize": "^6.0.0",
+    "remark-gfm": "^4.0.0",
     "remark-parse": "^11.0.0",
     "remark-rehype": "^11.1.0",
     "unified": "^11.0.4",
