--- a/bricks/basic/package.json
+++ b/bricks/basic/package.json
@@ -38,6 +38,7 @@
     "postpublish": "mv package.json.bak package.json"
   },
   "dependencies": {
+    "@next-api-sdk/micro-app-standalone-sdk": "^1.1.1",
     "@next-api-sdk/user-service-sdk": "^1.3.0",
     "@next-core/element": "^1.2.12",
     "@next-core/http": "^1.2.7",
