--- a/bricks/basic/package.json
+++ b/bricks/basic/package.json
@@ -44,18 +44,20 @@
     "@next-core/element": "^1.2.16",
     "@next-core/http": "^1.2.11",
     "@next-core/i18n": "^1.0.73",
-    "@next-core/react-element": "^1.0.35",
-    "@next-core/react-runtime": "^1.7.9",
+    "@next-core/pipes": "^2.0.30",
+    "@next-core/react-element": "^2.0.0",
+    "@next-core/react-runtime": "^2.0.0",
     "@next-core/runtime": "^1.59.2",
     "@next-core/theme": "^1.5.4",
     "@next-core/types": "^1.14.0",
+    "@next-core/utils": "^1.7.31",
     "@next-shared/general": "^0.10.7",
     "@next-shared/story": "^0.0.4",
     "broadcast-channel": "^7.0.0",
     "classnames": "^2.3.2",
     "dompurify": "^3.1.6",
     "lodash": "^4.17.21",
-    "react": "0.0.0-experimental-ee8509801-20230117",
+    "react": "^19.0.0",
     "react-i18next": "^12.3.1"
   },
   "devDependencies": {
