--- a/bricks/containers/package.json
+++ b/bricks/containers/package.json
@@ -37,14 +37,14 @@
   "dependencies": {
     "@next-core/element": "^1.2.16",
     "@next-core/i18n": "^1.0.73",
-    "@next-core/react-element": "^1.0.35",
+    "@next-core/react-element": "^2.0.0",
     "@next-core/runtime": "^1.59.2",
     "@next-core/types": "^1.14.0",
     "@next-core/utils": "^1.7.31",
     "@next-shared/general": "^0.10.7",
     "@next-shared/story": "^0.0.4",
     "classnames": "^2.3.2",
-    "react": "0.0.0-experimental-ee8509801-20230117",
+    "react": "^19.0.0",
     "react-rnd": "^10.4.1"
   },
   "devDependencies": {
