--- a/bricks/icons/package.json
+++ b/bricks/icons/package.json
@@ -76,11 +76,11 @@
     "@fortawesome/free-regular-svg-icons": "^6.6.0",
     "@fortawesome/free-solid-svg-icons": "^6.6.0",
     "@next-core/element": "^1.2.16",
-    "@next-core/react-element": "^1.0.35",
+    "@next-core/react-element": "^2.0.0",
     "@next-core/runtime": "^1.59.2",
     "@next-core/utils": "^1.7.31",
     "lodash": "^4.17.21",
-    "react": "0.0.0-experimental-ee8509801-20230117"
+    "react": "^19.0.0"
   },
   "devDependencies": {
     "@fortawesome/fontawesome-svg-core": "^6.6.0",
