--- a/bricks/illustrations/package.json
+++ b/bricks/illustrations/package.json
@@ -59,12 +59,12 @@
   "dependencies": {
     "@next-core/element": "^1.2.16",
     "@next-core/illustrations": "^0.11.34",
-    "@next-core/react-element": "^1.0.35",
-    "@next-core/react-runtime": "^1.7.9",
+    "@next-core/react-element": "^2.0.0",
+    "@next-core/react-runtime": "^2.0.0",
     "@next-core/types": "^1.14.0",
     "@next-core/utils": "^1.7.31",
     "lodash": "^4.17.21",
-    "react": "0.0.0-experimental-ee8509801-20230117"
+    "react": "^19.0.0"
   },
   "devDependencies": {
     "@next-core/build-next-bricks": "^1.23.10",
