--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
   },
   "devDependencies": {
     "@cypress/browserify-preprocessor": "^3.0.2",
+    "@next-bricks/containers": "^1.14.2",
     "@next-bricks/form": "^1.15.3",
     "@next-core/babel-preset-next": "^1.0.24",
     "@next-core/brick-container": "^3.20.1",
