--- a/bricks/containers/package.json
+++ b/bricks/containers/package.json
@@ -41,6 +41,7 @@
     "@next-core/runtime": "^1.59.1",
     "@next-core/types": "^1.14.0",
     "@next-core/utils": "^1.7.31",
+    "@next-shared/general": "^0.10.6",
     "@next-shared/story": "^0.0.4",
     "classnames": "^2.3.2",
     "react": "0.0.0-experimental-ee8509801-20230117",
@@ -51,6 +52,7 @@
     "@next-core/test-next": "^1.1.8"
   },
   "peerDependencies": {
-    "@next-bricks/basic": "*"
+    "@next-bricks/basic": "*",
+    "@next-bricks/icons": "*"
   }
 }
