--- a/bricks/basic/package.json
+++ b/bricks/basic/package.json
@@ -40,6 +40,7 @@
   "dependencies": {
     "@next-api-sdk/micro-app-standalone-sdk": "^1.1.1",
     "@next-api-sdk/user-service-sdk": "^1.3.0",
+    "@next-core/easyops-runtime": "^0.13.3",
     "@next-core/element": "^1.2.16",
     "@next-core/http": "^1.2.11",
     "@next-core/i18n": "^1.0.73",
