--- a/bricks/containers/deploy-default/package.conf.yaml
+++ b/bricks/containers/deploy-default/package.conf.yaml
@@ -5,6 +5,6 @@ dependencies:
     version: ^2.90.17 || ^3.8.15
     local_deploy: true
   - name: "basic-NB"
-    version: ">= 0.15.0"
+    version: "^1.54.0"
   - name: "icons-NB"
     version: ">= 0.3.0"
