--- a/bricks/icons/package.json
+++ b/bricks/icons/package.json
@@ -56,7 +56,8 @@
     },
     "./*": {
       "types": "./dist-types/*/index.d.ts"
-    }
+    },
+    "./jsx.d.ts": "./dist-types/jsx.d.ts"
   },
   "scripts": {
     "prestart": "node ./scripts/pre-build.js",
@@ -65,7 +66,7 @@
     "prebuild:types": "node ./scripts/pre-build.js",
     "build": "npm run build:main && npm run build:types",
     "build:main": "cross-env NODE_ENV=production build-next-bricks",
-    "build:types": "tsc --emitDeclarationOnly --declaration --declarationDir dist-types --project tsconfig.json",
+    "build:types": "tsc --emitDeclarationOnly --declaration --declarationDir dist-types --project tsconfig.json && cp src/jsx.d.ts dist-types/jsx.d.ts",
     "build:manifest": "cross-env NODE_ENV=production build-next-bricks --manifest-only",
     "test": "cross-env NODE_ENV='test' test-next",
     "test:ci": "cross-env NODE_ENV='test' CI=true test-next",
