--- a/bricks/illustrations/package.json
+++ b/bricks/illustrations/package.json
@@ -21,7 +21,11 @@
     "./dist/manifest.json": "./dist/manifest.json",
     "./data-providers/*": {
       "types": "./dist-types/data-providers/*.d.ts"
-    }
+    },
+    "./*": {
+      "types": "./dist-types/*/index.d.ts"
+    },
+    "./jsx.d.ts": "./dist-types/jsx.d.ts"
   },
   "nx": {
     "targets": {
@@ -49,7 +53,7 @@
     "prebuild:types": "node ./scripts/pre-build.js",
     "build": "npm run build:main && npm run build:types",
     "build:main": "cross-env NODE_ENV=production build-next-bricks",
-    "build:types": "tsc --emitDeclarationOnly --declaration --declarationDir dist-types --project tsconfig.json",
+    "build:types": "tsc --emitDeclarationOnly --declaration --declarationDir dist-types --project tsconfig.json && cp src/jsx.d.ts dist-types/jsx.d.ts",
     "build:manifest": "cross-env NODE_ENV=production build-next-bricks --manifest-only",
     "test": "cross-env NODE_ENV='test' test-next",
     "test:ci": "cross-env NODE_ENV='test' CI=true test-next",
