--- a/bricks/illustrations/package.json
+++ b/bricks/illustrations/package.json
@@ -15,6 +15,7 @@
     "dist-types",
     "docs"
   ],
+  "types": "dist-types/jsx.d.ts",
   "exports": {
     "./package.json": "./package.json",
     "./dist/bricks.json": "./dist/bricks.json",
@@ -22,10 +23,10 @@
     "./data-providers/*": {
       "types": "./dist-types/data-providers/*.d.ts"
     },
+    ".": "./dist-types/jsx.d.ts",
     "./*": {
       "types": "./dist-types/*/index.d.ts"
-    },
-    "./jsx.d.ts": "./dist-types/jsx.d.ts"
+    }
   },
   "nx": {
     "targets": {
@@ -53,7 +54,7 @@
     "prebuild:types": "node ./scripts/pre-build.js",
     "build": "npm run build:main && npm run build:types",
     "build:main": "cross-env NODE_ENV=production build-next-bricks",
-    "build:types": "tsc --emitDeclarationOnly --declaration --declarationDir dist-types --project tsconfig.json && cp src/jsx.d.ts dist-types/jsx.d.ts",
+    "build:types": "tsc --emitDeclarationOnly --declaration --declarationDir dist-types --project tsconfig.json && copy-jsx-d-ts",
     "build:manifest": "cross-env NODE_ENV=production build-next-bricks --manifest-only",
     "test": "cross-env NODE_ENV='test' test-next",
     "test:ci": "cross-env NODE_ENV='test' CI=true test-next",
